# fluidic-node

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: docker.yml
benches/: metabolic_bench.rs
docker/: Dockerfile
scripts/: run-node.sh
src/: lib.rs  main.rs
src/api/: evm_rpc.rs  mod.rs  routes.rs  server.rs  state.rs  websocket.rs
src/bridge/: mod.rs
src/consensus/: certificate.rs  dag.rs  domain.rs  mod.rs  ntt.rs  oscillator.rs  simulation.rs
src/crypto/: keys.rs  mod.rs  phase_shift.rs
src/evm/: executor.rs  mod.rs
src/field/: coordinates.rs  mod.rs  wave_field.rs
src/light_client/: mod.rs
src/network/: buffer.rs  mod.rs  node.rs  tcp_gossip.rs
src/operator/: mod.rs  rewards.rs  stake.rs
src/persistence/: mod.rs
src/state/: merkle.rs  mod.rs
src/value/: metabolic.rs  mod.rs  spectrum.rs  stream.rs  supply.rs
