[package]
name = "fluidic"
version = "0.1.0"
edition = "2024"
authors = ["Fluidic Research Prototype"]
description = "Continuous-wave state engine: NTT aggregation + vector-clock DAG ordering"
license = "MIT OR Apache-2.0"

[lib]
name = "fluidic"
path = "src/lib.rs"

[[bin]]
name = "fluidic"
path = "src/main.rs"

[[bin]]
name = "mesh_node"
path = "src/bin/mesh_node.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
blake3 = "1.5"
bytes = "1"
dashmap = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1"
rayon = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
ethers-core = "2"
revm = { version = "14", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
ethers-signers = "2"

[[bench]]
name = "metabolic_bench"
harness = false

